# linen-draper

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  rxconfig.py
alembic/versions/: 64884b2bd226_.py  813b179b503b_.py
deploy/: .env.example  Caddyfile  docker-compose.yml  install.sh  linen-draper.service
linen_draper/: emailer.py  linen_draper.py  models.py  scraper.py
linen_draper/components/: navbar.py
linen_draper/pages/: dashboard.py  settings.py
linen_draper/state/: auth.py  dashboard.py  settings.py
tests/: conftest.py
tests/e2e/: test_auth_flow.py  test_dashboard.py  test_settings.py
tests/integration/: test_db_crud.py  test_emailer.py  test_scraper.py
tests/unit/: test_email_html.py  test_env_detection.py  test_models.py  test_scraper_filtering.py  test_time_windows.py
