[project]
name = "linen-draper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosmtplib>=5.1.0",
    "alembic>=1.18.4",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "reflex>=0.9.1",
    "reflex-local-auth>=0.4.0",
    "sqlmodel>=0.0.38",
]

[tool.pyright]
exclude = ["alembic/**", ".web/**", ".venv/**", "__pycache__/**"]
typeCheckingMode = "basic"
reportUnusedImport = false
reportUnusedVariable = false
reportUnusedCallResult = false

[tool.ruff]
exclude = ["alembic/**", ".web/**", ".venv/**", "__pycache__/**"]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "respx>=0.23.1",
    "ruff>=0.15.12",
]
